// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusMessage should render with exact matches 1`] = `
<EuiCallOut
  color="success"
  data-test-subj="createIndexPatternStatusMessage"
  iconType="check"
  size="s"
  title={
    <span>
       
      <FormattedMessage
        defaultMessage="Your index pattern matches {sourceCount} {sourceCount, plural, one {source} other {sources} }."
        id="indexPatternManagement.createIndexPattern.step.status.successLabel.successDetail"
        values={
          Object {
            "sourceCount": 1,
          }
        }
      />
    </span>
  }
/>
`;

exports[`StatusMessage should render with no partial matches 1`] = `
<EuiCallOut
  color="warning"
  data-test-subj="createIndexPatternStatusMessage"
  size="s"
  title={
    <span>
      <FormattedMessage
        defaultMessage="The index pattern you've entered doesn't match any indices. You can match {indicesLength, plural, one {your} other {any of your} } {strongIndices}, below."
        id="indexPatternManagement.createIndexPattern.step.status.notMatchLabel.notMatchDetail"
        values={
          Object {
            "indicesLength": 2,
            "strongIndices": <strong>
              <FormattedMessage
                defaultMessage="{indicesLength, plural, one {# index} other {# indices} }"
                id="indexPatternManagement.createIndexPattern.step.status.notMatchLabel.allIndicesLabel"
                values={
                  Object {
                    "indicesLength": 2,
                  }
                }
              />
            </strong>,
          }
        }
      />
    </span>
  }
/>
`;

exports[`StatusMessage should render with partial matches 1`] = `
<EuiCallOut
  color="primary"
  data-test-subj="createIndexPatternStatusMessage"
  size="s"
  title={
    <span>
      <FormattedMessage
        defaultMessage="Your index pattern doesn't match any indices, but you have {strongIndices} which {matchedIndicesLength, plural, one {looks} other {look} } similar."
        id="indexPatternManagement.createIndexPattern.step.status.partialMatchLabel.partialMatchDetail"
        values={
          Object {
            "matchedIndicesLength": 1,
            "strongIndices": <strong>
              <FormattedMessage
                defaultMessage="{matchedIndicesLength, plural, one {index} other {# indices} }"
                id="indexPatternManagement.createIndexPattern.step.status.partialMatchLabel.strongIndicesLabel"
                values={
                  Object {
                    "matchedIndicesLength": 1,
                  }
                }
              />
            </strong>,
          }
        }
      />
    </span>
  }
/>
`;

exports[`StatusMessage should render without a query 1`] = `
<EuiCallOut
  color="primary"
  data-test-subj="createIndexPatternStatusMessage"
  size="s"
  title={
    <span>
      <FormattedMessage
        defaultMessage="Your index pattern can match {sourceCount, plural, one {your # source} other {any of your # sources} }."
        id="indexPatternManagement.createIndexPattern.step.status.matchAnyLabel.matchAnyDetail"
        values={
          Object {
            "sourceCount": 2,
          }
        }
      />
    </span>
  }
/>
`;

exports[`StatusMessage should show that no indices exist 1`] = `
<EuiCallOut
  color="primary"
  data-test-subj="createIndexPatternStatusMessage"
  size="s"
  title={
    <span>
      <FormattedMessage
        defaultMessage="No Elasticsearch indices match your pattern."
        id="indexPatternManagement.createIndexPattern.step.status.noSystemIndicesLabel"
        values={Object {}}
      />
    </span>
  }
/>
`;

exports[`StatusMessage should show that system indices exist 1`] = `
<EuiCallOut
  color="primary"
  data-test-subj="createIndexPatternStatusMessage"
  size="s"
  title={
    <span>
      <FormattedMessage
        defaultMessage="No Elasticsearch indices match your pattern."
        id="indexPatternManagement.createIndexPattern.step.status.noSystemIndicesLabel"
        values={Object {}}
      />
    </span>
  }
/>
`;
